# actioncenter-kicker-applet-legacy

./: Doxyfile  Makefile.in  acinclude.m4  aclocal.m4  actioncenter_applet.kdevelop  actioncenter_applet.kdevses  config.h.in  configure  configure.in  configure.in.in  create_deb.sh  description-pak
PACKAGE/DEBIAN/: control  postinst
PACKAGE/opt/trinity/lib/trinity/: actioncenter_applet_panelapplet.la
assets/scripts_de/: actions.sh  proj.sh
assets/scripts_en/: actions.sh  proj.sh
assets/scripts_fr/: actions.sh  proj.sh
assets/scripts_ru/: actions.sh  proj.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am.disabled  index.docbook
po/: Makefile
src/: Makefile.am  Makefile.in  actioncenter_applet.cpp  actioncenter_applet.desktop  actioncenter_applet.h
